// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wish list Render wish component with category, cookingType 1`] = `
<div
  className="css-view-1dbjc4n r-borderBottomColor-1nd8m0h r-borderBottomWidth-qklmqi r-display-6koalj r-padding-1pcd2l5 r-width-13qz1uu"
>
  <div
    className="css-text-901oao r-color-cqee49 r-fontSize-adyw6z r-fontWeight-vw2c0b r-marginBottom-117bsoe"
    dir="auto"
  >
    2019-05-28
  </div>
  <div
    className="css-text-901oao r-fontSize-1i10wst"
    dir="auto"
  >
    Get the recipe for
    <span
      className="css-text-901oao css-textHasAncestor-16my406 r-fontSize-1i10wst r-fontWeight-vw2c0b"
      dir="auto"
    >
       Heathy 
    </span>
    with
    <span
      className="css-text-901oao css-textHasAncestor-16my406 r-fontSize-1i10wst r-fontWeight-vw2c0b"
      dir="auto"
    >
       Roasting 
    </span>
  </div>
</div>
`;

exports[`Wish list Render wish component with defaultProps 1`] = `null`;

exports[`Wish list Render wish component with size medium 1`] = `null`;

exports[`Wish list Render wish list component with defaultProps 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci r-marginBottom-117bsoe"
    style={
      Object {
        "backgroundColor": "rgba(66,165,245,1.00)",
        "borderBottomColor": "rgba(0,0,0,0.00)",
        "borderBottomLeftRadius": "4px",
        "borderBottomRightRadius": "4px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,0,0,0.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,0,0,0.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,0,0,0.00)",
        "borderTopLeftRadius": "4px",
        "borderTopRightRadius": "4px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
        "marginTop": "20px",
        "minWidth": "64px",
        "paddingBottom": "5px",
        "paddingLeft": "5px",
        "paddingRight": "5px",
        "paddingTop": "5px",
      }
    }
  >
    <div
      className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
      data-focusable={true}
      disabled={false}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "4px",
          "borderBottomRightRadius": "4px",
          "borderTopLeftRadius": "4px",
          "borderTopRightRadius": "4px",
          "overflowX": "hidden",
          "overflowY": "hidden",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz r-color-cqee49 r-letterSpacing-ud0q2t r-marginHorizontal-1ydw1k6 r-marginVertical-712mwr r-textAlign-q4m81j"
          dir="auto"
          style={
            Object {
              "direction": "ltr",
              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406 r-color-jwli3a r-fontWeight-1kfrs79 r-textTransform-tsynxw"
            dir="auto"
            style={
              Object {
                "direction": "ltr",
                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "textAlign": "left",
              }
            }
          >
            Add Wishlist
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wish list Render wish list component with error 1`] = `
<div
  aria-live="polite"
  className="css-view-1dbjc4n"
  style={
    Object {
      "bottom": "0px",
      "left": "0px",
      "position": "absolute",
      "right": "0px",
      "top": "0px",
    }
  }
>
  <div
    className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73"
    data-focusable={true}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexBasis": "0%",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "backgroundColor": "rgba(0,0,0,0.50)",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
        "opacity": 1,
      }
    }
    tabIndex="0"
  />
  <div
    className="css-view-1dbjc4n r-bottom-1p0dtai r-justifyContent-1777fci r-left-1d2f490 r-pointerEvents-12vffkv r-position-u8s1d r-right-zchlnj r-top-ipm5af"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxPack": "start",
          "WebkitJustifyContent": "flex-start",
          "backgroundColor": "rgba(255,255,255,1.00)",
          "borderBottomLeftRadius": "4px",
          "borderBottomRightRadius": "4px",
          "borderTopLeftRadius": "4px",
          "borderTopRightRadius": "4px",
          "boxShadow": "0px 23px 24px rgba(0,0,0,0.24)",
          "justifyContent": "flex-start",
          "marginBottom": "0px",
          "marginLeft": "26px",
          "marginRight": "26px",
          "marginTop": "0px",
          "msFlexPack": "start",
          "opacity": 1,
          "top": "150px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-paddingBottom-qn3fzs r-paddingHorizontal-1guathk"
        style={
          Object {
            "paddingTop": "24px",
          }
        }
      >
        <div
          className="css-text-901oao r-color-1vs7qoz r-fontSize-1i10wst r-fontStyle-36ujnk"
          dir="auto"
        >
          Error!
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-17s6mgv r-padding-edyy15"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(66,165,245,1.00)",
              "borderBottomColor": "rgba(0,0,0,0.00)",
              "borderBottomLeftRadius": "4px",
              "borderBottomRightRadius": "4px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0px",
              "borderLeftColor": "rgba(0,0,0,0.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0px",
              "borderRightColor": "rgba(0,0,0,0.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "0px",
              "borderTopColor": "rgba(0,0,0,0.00)",
              "borderTopLeftRadius": "4px",
              "borderTopRightRadius": "4px",
              "borderTopStyle": "solid",
              "borderTopWidth": "0px",
              "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "marginRight": "10px",
              "minWidth": "64px",
              "paddingBottom": "5px",
              "paddingLeft": "5px",
              "paddingRight": "5px",
              "paddingTop": "5px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "borderBottomLeftRadius": "4px",
                "borderBottomRightRadius": "4px",
                "borderTopLeftRadius": "4px",
                "borderTopRightRadius": "4px",
                "overflowX": "hidden",
                "overflowY": "hidden",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
            >
              <div
                className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ydw1k6 r-marginVertical-712mwr r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(0,0,0,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  }
                }
              >
                <span
                  className="css-text-901oao css-textHasAncestor-16my406 r-color-jwli3a r-fontWeight-1kfrs79 r-textTransform-tsynxw"
                  dir="auto"
                  style={
                    Object {
                      "direction": "ltr",
                      "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "textAlign": "left",
                    }
                  }
                >
                  Done
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wish list Render wish list component with loading true 1`] = `
<div
  className="css-view-1dbjc4n r-justifyContent-1777fci"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    role="progressbar"
  >
    <div
      className="css-view-1dbjc4n r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-127358a r-animationTimingFunction-1ldzwu0 r-height-z80fyv r-width-19wmn03"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "opacity": 0.2,
              "stroke": "#c5c5c5",
            }
          }
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "stroke": "#c5c5c5",
              "strokeDasharray": 80,
              "strokeDashoffset": 60,
            }
          }
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Wish list Render wish list component with size medium 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    style={
      Object {
        "backgroundColor": "rgba(66,165,245,1.00)",
        "borderBottomColor": "rgba(0,0,0,0.00)",
        "borderBottomLeftRadius": "4px",
        "borderBottomRightRadius": "4px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,0,0,0.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,0,0,0.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,0,0,0.00)",
        "borderTopLeftRadius": "4px",
        "borderTopRightRadius": "4px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
        "marginBottom": "20px",
        "marginTop": "20px",
        "minWidth": "64px",
        "paddingBottom": "5px",
        "paddingLeft": "5px",
        "paddingRight": "5px",
        "paddingTop": "5px",
      }
    }
  >
    <div
      className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
      data-focusable={true}
      disabled={false}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "4px",
          "borderBottomRightRadius": "4px",
          "borderTopLeftRadius": "4px",
          "borderTopRightRadius": "4px",
          "overflowX": "hidden",
          "overflowY": "hidden",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ydw1k6 r-marginVertical-712mwr r-textAlign-q4m81j"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,0,0,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406 r-color-jwli3a r-fontWeight-1kfrs79 r-textTransform-tsynxw"
            dir="auto"
            style={
              Object {
                "direction": "ltr",
                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "textAlign": "left",
              }
            }
          >
            Add Wishlist
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wish list Renders correctly wish commponent 1`] = `null`;

exports[`Wish list Renders correctly wish list commponent 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    style={
      Object {
        "backgroundColor": "rgba(66,165,245,1.00)",
        "borderBottomColor": "rgba(0,0,0,0.00)",
        "borderBottomLeftRadius": "4px",
        "borderBottomRightRadius": "4px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,0,0,0.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,0,0,0.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,0,0,0.00)",
        "borderTopLeftRadius": "4px",
        "borderTopRightRadius": "4px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
        "marginBottom": "20px",
        "marginTop": "20px",
        "minWidth": "64px",
        "paddingBottom": "5px",
        "paddingLeft": "5px",
        "paddingRight": "5px",
        "paddingTop": "5px",
      }
    }
  >
    <div
      className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
      data-focusable={true}
      disabled={false}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "4px",
          "borderBottomRightRadius": "4px",
          "borderTopLeftRadius": "4px",
          "borderTopRightRadius": "4px",
          "overflowX": "hidden",
          "overflowY": "hidden",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ydw1k6 r-marginVertical-712mwr r-textAlign-q4m81j"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,0,0,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406 r-color-jwli3a r-fontWeight-1kfrs79 r-textTransform-tsynxw"
            dir="auto"
            style={
              Object {
                "direction": "ltr",
                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "textAlign": "left",
              }
            }
          >
            Add Wishlist
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
